# skaidb

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md
.github/: nfpm.yaml
.github/workflows/: ci.yml  release.yml
bench/: README.md  run_suite.sh
bench/clients/: fts_bench.py  fts_corpus.py  fts_logs_corpus.py  maria_bench.py  mongo_bench.py  pg_bench.py  skaidb_bench.py
bench/setup/: mariadb_primary.sh  mariadb_replica.sh  mongo_node.sh  postgres_primary.sh  postgres_standby.sh
config/: skaidb.toml
crates/skaidb-auth/: Cargo.toml
crates/skaidb-auth/src/: crypto.rs  lib.rs  rbac.rs  scram.rs
crates/skaidb-cli/: Cargo.toml
crates/skaidb-cli/src/: certs.rs  cluster.rs  dump.rs  http.rs  main.rs  render.rs
crates/skaidb-cluster/: Cargo.toml
crates/skaidb-cluster/src/: host.rs  internode.rs  lib.rs  memguard.rs  node.rs  quorum.rs  ring.rs  transport.rs
crates/skaidb-config/: Cargo.toml
crates/skaidb-config/src/: lib.rs
crates/skaidb-ctl/: Cargo.toml
crates/skaidb-ctl/src/: main.rs
crates/skaidb-driver/: Cargo.toml
crates/skaidb-driver/examples/: abench.rs  bench.rs
crates/skaidb-driver/src/: lib.rs
crates/skaidb-engine/: Cargo.toml
crates/skaidb-engine/examples/: fts_bench.rs  group_by_memory_check.rs  index_bench.rs  read_path_breakdown.rs  write_path_breakdown.rs
crates/skaidb-engine/src/: catalog.rs  embed.rs  error.rs  eval.rs  exec.rs  geo.rs  lib.rs  namespace.rs  result.rs  scan_meter.rs  session.rs  ts_query.rs  vector.rs
crates/skaidb-fts/: Cargo.toml
crates/skaidb-fts/examples/: phase0_spike.rs
crates/skaidb-fts/src/: analyzer.rs  index.rs  lib.rs  query.rs
crates/skaidb-gssapi/: Cargo.toml
crates/skaidb-gssapi/examples/: roundtrip.rs
crates/skaidb-gssapi/src/: lib.rs
crates/skaidb-net/: Cargo.toml
crates/skaidb-net/src/: lib.rs
crates/skaidb-proto/: Cargo.toml
crates/skaidb-proto/src/: frame.rs  handshake.rs  lib.rs  message.rs
crates/skaidb-server/: Cargo.toml
crates/skaidb-server/assets/: ui.css  ui.html  ui.js
crates/skaidb-server/src/: admin.rs  audit.rs  authn.rs  binary.rs  cli.rs  drivers.rs  embed_http.rs  es.rs  lib.rs  main.rs  memory.rs  memtier.rs  metrics.rs  naming.rs  nodestats.rs  promql.rs  promwrite.rs  rerank_http.rs  rest.rs  shared.rs  slowlog.rs  tls.rs  ui.rs  witness_pull.rs  witnesses.rs
crates/skaidb-slt/: Cargo.toml
crates/skaidb-slt/src/: lib.rs
crates/skaidb-slt/tests/: acid.rs  harness.rs
crates/skaidb-slt/tests/corpus/: aggregates.slt  basic.slt  filters.slt  order_limit.slt  timeseries.slt
crates/skaidb-sql/: Cargo.toml
crates/skaidb-sql/src/: ast.rs  bind.rs  lib.rs  parser.rs  token.rs
crates/skaidb-storage/: Cargo.toml
crates/skaidb-storage/examples/: cache_contention.rs  raw_fsync.rs
crates/skaidb-storage/src/: bloom.rs  cache.rs  compress.rs  crc.rs  crypto.rs  engine.rs  error.rs  hlc.rs  lib.rs  memtable.rs  posfile.rs  sstable.rs  wal.rs
crates/skaidb-tsdb/: Cargo.toml
crates/skaidb-tsdb/examples/: ts_bench.rs
crates/skaidb-tsdb/src/: bitstream.rs  block.rs  chunk.rs  compact.rs  head.rs  lib.rs  store.rs  varenc.rs  wal.rs
crates/skaidb-types/: Cargo.toml
crates/skaidb-types/src/: codec.rs  json.rs  lib.rs  slog.rs  ternary.rs  value.rs
docker/: Dockerfile  docker-compose.cluster.yml  docker-compose.yml
docs/: BENCHMARKS.md  CLUSTERING.md  DOCKER.md  FTS_TODO.md  GEO.md  GLOBAL_INDEXES.md  GRAFANA.md  INDEXING.md  INDEX_BENCH.md  INSTALL.md  KERBEROS.md  LLM.md  METRICS.md  PERFORMANCE_AUDIT.md  QUERY_SYNTAX.md  RELEASING.md  RESHARDING.md  SEARCH.md  TIMESERIES.md  TODO.md  UI.md  UI_TODO.md  VECTOR.md
drivers/: .gitignore  PROTOCOL.md  README.md
drivers/dotnet/: README.md  Skaidb.cs  Skaidb.csproj
drivers/dotnet/example/: Example.cs  Example.csproj
drivers/go/: README.md  go.mod  skaidb.go
drivers/go/example/: main.go
drivers/java/: Example.java  README.md
drivers/java/src/main/java/com/skaidb/: Skaidb.java
drivers/nodejs/: README.md  example.js  package.json  skaidb.d.ts  skaidb.js
drivers/php/: README.md  composer.json  example.php
drivers/php/src/: Skaidb.php
drivers/python/: README.md  example.py  pyproject.toml
drivers/python/skaidb/: __init__.py
drivers/python/tests/: test_codec.py
drivers/ruby/: README.md  example.rb  skaidb.gemspec
drivers/ruby/lib/: skaidb.rb
examples/: README.md
examples/dotnet/: BasicUsage.cs  BasicUsage.csproj
examples/go/: basic_usage.go  go.mod
examples/java/: BasicUsage.java
examples/nodejs/: basic_usage.js
examples/php/: basic_usage.php
examples/python/: basic_usage.py
examples/ruby/: basic_usage.rb
examples/rust/: Cargo.toml  basic_usage.rs
examples/vectors/: README.md
examples/vectors/python/: vector_search.py
examples/vectors/rust/: Cargo.toml  vector_search.rs
packaging/: postinstall.sh  postremove.sh  preremove.sh  skaidb.default  skaidb.service  skaidb.toml
