[workspace]
resolver = "2"
members = [
    "crates/skaidb-types",
    "crates/skaidb-storage",
    "crates/skaidb-tsdb",
    "crates/skaidb-auth",
    "crates/skaidb-config",
    "crates/skaidb-sql",
    "crates/skaidb-fts",
    "crates/skaidb-engine",
    "crates/skaidb-cluster",
    "crates/skaidb-net",
    "crates/skaidb-proto",
    "crates/skaidb-gssapi",
    "crates/skaidb-server",
    "crates/skaidb-driver",
    "crates/skaidb-cli",
    "crates/skaidb-slt",
]

[workspace.package]
version = "0.138.4"
edition = "2021"
license = "SSPL-1.0"
repository = "https://github.com/porcupin26/skaidb"
rust-version = "1.93"

[workspace.dependencies]
skaidb-types = { path = "crates/skaidb-types" }
skaidb-storage = { path = "crates/skaidb-storage" }
skaidb-tsdb = { path = "crates/skaidb-tsdb" }
skaidb-auth = { path = "crates/skaidb-auth" }
skaidb-config = { path = "crates/skaidb-config" }
skaidb-sql = { path = "crates/skaidb-sql" }
skaidb-fts = { path = "crates/skaidb-fts" }
skaidb-engine = { path = "crates/skaidb-engine" }
skaidb-cluster = { path = "crates/skaidb-cluster" }
skaidb-net = { path = "crates/skaidb-net" }
skaidb-proto = { path = "crates/skaidb-proto" }
skaidb-gssapi = { path = "crates/skaidb-gssapi" }
skaidb-driver = { path = "crates/skaidb-driver" }

thiserror = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
# float_roundtrip: parse floats correctly-rounded, so a float printed into a
# JSON response (an ES hit `sort` value, a `_score`) parses back to the SAME
# f64 when a client echoes it (search_after cursors compare by equality).
serde_json = { version = "1", features = ["float_roundtrip"] }
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
lz4_flex = "0.11"
snap = "1"
brotli = "7"
rustyline = "18"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
ring = "0.17"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }

[profile.release]
lto = "thin"
codegen-units = 1

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
