[package]
name = "skaidb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "skaidbsh"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
skaidb-engine.workspace = true
skaidb-types.workspace = true
skaidb-driver.workspace = true
skaidb-proto.workspace = true
clap.workspace = true
rustyline.workspace = true
serde_json.workspace = true

[dev-dependencies]
skaidb-sql.workspace = true
