[package]
name = "skaidb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "skaidbsh"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
# Kerberos (GSSAPI) client auth for `skaidbsh --auth-mechanism gssapi`.
# Enables the driver's Kerberos support (-> cross-krb5, glibc/macOS/Windows).
kerberos = ["skaidb-driver/kerberos"]

[dependencies]
skaidb-engine.workspace = true
skaidb-types.workspace = true
skaidb-driver.workspace = true
skaidb-proto.workspace = true
clap.workspace = true
rustyline.workspace = true
serde_json.workspace = true
rcgen.workspace = true
skaidb-net.workspace = true
rustls.workspace = true

[dev-dependencies]
skaidb-sql.workspace = true
