[package]
name = "skaidb-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
skaidb-types.workspace = true
skaidb-storage.workspace = true
skaidb-engine.workspace = true
skaidb-sql.workspace = true
skaidb-proto.workspace = true
skaidb-auth.workspace = true
thiserror.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
