[package]
name = "skaidb-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "skaidbctl"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap.workspace = true
serde_json.workspace = true
