[package]
name = "skaidb-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
# Kerberos (SASL GSSAPI) client auth. Pulls in skaidb-gssapi -> cross-krb5,
# which links only on glibc/macOS/Windows — never the static-musl build.
kerberos = ["dep:skaidb-gssapi", "skaidb-gssapi/kerberos"]

[dependencies]
skaidb-types.workspace = true
skaidb-proto.workspace = true
skaidb-auth.workspace = true
skaidb-net.workspace = true
rustls.workspace = true
thiserror.workspace = true
# Optional: only compiled with the `kerberos` feature.
skaidb-gssapi = { workspace = true, optional = true }
