[package]
name = "skaidb-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
skaidb-types.workspace = true
skaidb-storage.workspace = true
skaidb-tsdb.workspace = true
skaidb-sql.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
