[package]
name = "skaidb-fts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Full-text search for skaidb (Tantivy-backed, engine-agnostic API)"

[dependencies]
skaidb-types = { workspace = true }
tantivy = "0.26"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
