[package]
name = "skaidb-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rustls.workspace = true
rustls-pemfile.workspace = true

[dev-dependencies]
rcgen.workspace = true
