[package]
name = "skaidb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "skaidb_server"
path = "src/lib.rs"

[[bin]]
name = "skaidb"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
skaidb-config.workspace = true
skaidb-engine.workspace = true
skaidb-tsdb.workspace = true
skaidb-cluster.workspace = true
skaidb-proto.workspace = true
skaidb-types.workspace = true
skaidb-auth.workspace = true
skaidb-sql.workspace = true
clap.workspace = true
serde_json.workspace = true
snap.workspace = true
# jemalloc as the global allocator (server binary only): the default glibc
# allocator does not return freed memory to the OS under the bulk-load +
# index-build churn, ratcheting RSS to the cgroup limit and OOM-looping small
# nodes. Not built on MSVC (jemalloc is unsupported there).
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }
# Safe jemalloc introspection: memory-pressure logs report the allocator's
# allocated/resident/retained split so live heap is distinguishable from
# allocator-retained pages (what the OOM post-mortems lacked).
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

# Safe SIGTERM/SIGINT handling for graceful shutdown (flush + FTS commit
# before exit — an unclean kill costs a full search-index rebuild). Unix-only:
# the iterator API doesn't exist on Windows.
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[dev-dependencies]
skaidb-driver.workspace = true
