[package]
name = "skaidb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "skaidb_server"
path = "src/lib.rs"

[[bin]]
name = "skaidb"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
# Kerberos (SASL GSSAPI) client auth. Pulls in skaidb-gssapi -> cross-krb5, a
# C library that links only on glibc/macOS/Windows — never the static-musl
# build. The release matrix enables this on those targets and leaves it off
# for musl. Without it, a client requesting GSSAPI is refused cleanly.
kerberos = ["dep:skaidb-gssapi", "skaidb-gssapi/kerberos"]

[dependencies]
skaidb-config.workspace = true
# Optional: only compiled with the `kerberos` feature (see above).
skaidb-gssapi = { workspace = true, optional = true }
skaidb-engine.workspace = true
skaidb-tsdb.workspace = true
regex.workspace = true
skaidb-cluster.workspace = true
skaidb-net.workspace = true
rustls.workspace = true
skaidb-proto.workspace = true
skaidb-types.workspace = true
skaidb-auth.workspace = true
skaidb-sql.workspace = true
# Witness mode: the pull loop is a SQL client of the PRIMARY cluster
# (schema listing, registration/heartbeat) — the same driver crate every
# external client uses, so SCRAM and failover come for free.
skaidb-driver.workspace = true
clap.workspace = true
serde_json.workspace = true
snap.workspace = true
# jemalloc as the global allocator (server binary only): the default glibc
# allocator does not return freed memory to the OS under the bulk-load +
# index-build churn, ratcheting RSS to the cgroup limit and OOM-looping small
# nodes. Not built on MSVC (jemalloc is unsupported there).
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }
# Safe jemalloc introspection: memory-pressure logs report the allocator's
# allocated/resident/retained split so live heap is distinguishable from
# allocator-retained pages (what the OOM post-mortems lacked).
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

# Safe SIGTERM/SIGINT handling for graceful shutdown (flush + FTS commit
# before exit — an unclean kill costs a full search-index rebuild). Unix-only:
# the iterator API doesn't exist on Windows.
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[dev-dependencies]
rcgen.workspace = true

