[package]
name = "skaidb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
skaidb-types.workspace = true
thiserror.workspace = true
lz4_flex.workspace = true
brotli.workspace = true
ring.workspace = true
